--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=171,1
-Size=550,667
+Pos=49,37
+Size=260,254
+Collapsed=0
+
+[Window][ImGui Demo]
+Pos=57,-81
+Size=455,473
+Collapsed=0
+
+[Window][Simulation Speed]
+Pos=60,60
+Size=338,94
 Collapsed=0
 
