--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -28,3 +28,23 @@ Pos=1256,11
 Size=288,351
 Collapsed=0
 
+[Window][Boxes]
+Pos=49,468
+Size=164,77
+Collapsed=0
+
+[Window][Box 1]
+Pos=523,190
+Size=166,100
+Collapsed=0
+
+[Window][Box 2]
+Pos=372,266
+Size=166,100
+Collapsed=0
+
+[Window][Box 4]
+Pos=60,60
+Size=166,289
+Collapsed=0
+
