--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=38,122
+Pos=16,28
 Size=262,223
 Collapsed=0
 
@@ -46,5 +46,10 @@ Collapsed=0
 [Window][Box 4]
 Pos=60,60
 Size=166,289
+Collapsed=0
+
+[Window][Model]
+Pos=48,399
+Size=282,213
 Collapsed=0
 
