--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -49,12 +49,22 @@ Size=166,289
 Collapsed=0
 
 [Window][Model]
-Pos=11,359
+Pos=182,286
 Size=373,223
 Collapsed=0
 
 [Window][Raw Input]
 Pos=470,145
 Size=191,84
+Collapsed=0
+
+[Window][Model 1]
+Pos=19,271
+Size=248,249
+Collapsed=0
+
+[Window][Model 2]
+Pos=23,564
+Size=294,201
 Collapsed=0
 
