--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -69,7 +69,12 @@ Size=294,201
 Collapsed=0
 
 [Window][Plane]
-Pos=1259,412
+Pos=1255,378
 Size=303,372
+Collapsed=0
+
+[Window][Cube]
+Pos=283,29
+Size=279,330
 Collapsed=0
 
