--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=16,28
+Pos=2,25
 Size=262,223
 Collapsed=0
 
@@ -76,5 +76,10 @@ Collapsed=0
 [Window][Cube]
 Pos=21,300
 Size=279,330
+Collapsed=0
+
+[Window][Minecraft 1]
+Pos=-8,346
+Size=352,359
 Collapsed=0
 
