--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,7 +19,7 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=2,25
+Pos=9,18
 Size=262,223
 Collapsed=0
 
@@ -81,5 +81,15 @@ Collapsed=0
 [Window][Minecraft 1]
 Pos=-8,346
 Size=352,359
+Collapsed=0
+
+[Window][DirectionLight]
+Pos=431,358
+Size=278,225
+Collapsed=0
+
+[Window][Model 3]
+Pos=347,628
+Size=278,196
 Collapsed=0
 
